HTML.Assignment1.done

--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
   <head>
     <!-- Document information -->
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Laissa Kethllin Leitao Dias</title>
   </head>
   <body>
-    <!-- Document Content -->
+    <header>
+      <h4>Laissa Kethllin Leitao Dias</h4>
+    </header>
+    <main>
+      This is the Web Development 1<sup>st</sup> official assignment
+
+      <article><h4>About Me</h4></article>
+      
+      <p>My name is Laissa Kethllin, and I am a freshman student in the Interactive Media Design Program at the Algonquin College – North York Campus. I am originally from Brazil, but the world is my home. I have already a degree in Civil Engineer, but <b>I have decided to build my life as a creative.</b></p>
+      <p>One of my goals is to have geographical freedom, so I chose to follow a career that allows me to work from anywhere. I intend to develop all my skills in graphic design, photography, web development, filmmaking and entrepreneurship to be a multipotential creator e achieve my geographical freedom. </p>
+      <blockquote><q><em>Trust the magic of new beginnings.</em></q> by: <cite>KONINGKAART</cite></blockquote>
+    
+    </main>
+    <footer>@Copyright: Laissa Kethllin (<abbr title="Laissa Kethllin">LK</abbr>)</footer>
   </body>
 </html>
